kf-on-prem/kustomize/base/knative/serving/ingress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: knative-ingress-gateway
  labels:
    networking.knative.dev/ingress-provider: istio
    serving.knative.dev/release: v0.17.1
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*.knative.k8s.tidu.giize.com"
